# lit-cli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml
src/: cli.rs  main.rs  types.rs
src/commands/: mod.rs  new.rs
src/models/: asset.rs  mod.rs  path_source.rs  project.rs  staging.rs
src/ui/: mod.rs  terminal.rs
templates/components/: footer.js  footer.ts  header.js  header.ts  my-element.js  my-element.ts
templates/config/: .env.development.local.example  .env.local.example  .gitignore.example  vite.config.js
templates/css/: main.css
templates/docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
templates/html/: index.html
templates/json/: jsconfig.json  package.json  tsconfig.json
templates/lit-router/: app.js  app.ts  main.js  main.ts
templates/lit-router/html/: index.html
templates/lit-router/pages/: about.js  about.ts  home.js  home.ts  not-found.js  not-found.ts
templates/shared/styles/: buttonStyles.js  linkStyles.js
templates/shared/ui/: card.js  card.ts  loading-indicator.js  loading-indicator.ts
templates/types/: index.d.js  index.ts
templates/utils/: helpers.js  helpers.ts
